♻️ Refactor: Set `maven.compiler.parameters` to true